diesel_compile_tests/tests/fail/derive/belongs_to_missing_foreign_key_column.stderr
error[E0412]: cannot find type `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:13:21
   |
LL | #[diesel(belongs_to(Bar))]
   |                     ^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:13:21
   |
LL | #[diesel(belongs_to(Bar))]
   |                     ^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:22:40
   |
LL | #[diesel(belongs_to(Bar, foreign_key = bar_id))]
   |                                        ^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:22:40
   |
LL | #[diesel(belongs_to(Bar, foreign_key = bar_id))]
   |                                        ^^^^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:31:21
   |
LL | #[diesel(belongs_to(Bar))]
   |                     ^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:31:21
   |
LL | #[diesel(belongs_to(Bar))]
   |                     ^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:41:40
   |
LL | #[diesel(belongs_to(Bar, foreign_key = bar_id))]
   |                                        ^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> tests/fail/derive/belongs_to_missing_foreign_key_column.rs:41:40
   |
LL | #[diesel(belongs_to(Bar, foreign_key = bar_id))]
   |                                        ^^^^^^ not found in `foo`
